--- a/Code/login.html
+++ b/Code/login.html
@@ -38,10 +38,20 @@
 
     <div class="login-background">
         <div class="login-box">
-            <form action="">
-                <input type="text" id="login-email" placeholder="Your Email">
+            <form action="" autocomplete="off">
+                <div class="input-row">
+                    <input type="text" id="login-email" placeholder="Your Email" onkeyup="emailLoginValidation()">
+                    <img id="email-invalid" src="icons/invalid-icon.png" alt="invalid icon">
+                    <img id="email-valid" src="icons/save-popup.png" alt="valid icon">
+                    <small id="email-error">Email is incorrect, please try again.</small>
+                </div>
                 <div class="input-margin"></div>
-                <input type="password" id="login-password" placeholder="Your Password">
+                <div class="input-row">
+                    <input type="password" id="login-password" placeholder="Your Password" onkeyup="passwordLoginValidation()">
+                    <img id="password-invalid" src="icons/invalid-icon.png" alt="invalid icon">
+                    <img id="password-valid" src="icons/save-popup.png" alt="valid icon">
+                    <small id="password-error">Password is incorrect, please try again.</small>
+                </div>
                 <div class="input-margin"></div>
                 <button class="Submit">Login</button>
             </form>
