--- a/Code/about.html
+++ b/Code/about.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Nav Bar -->
-    
+
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo"><img src="images/logo_navbar.png" alt="Logo">
@@ -32,7 +32,7 @@
             <div class="line"></div>
         </label>
     </nav>
-    
+
     <!-- End of Nav Bar -->
     <!-- Contact Header -->
 
@@ -54,23 +54,10 @@
         <div class="experience">
             <span>+15</span>
             <h3>Years of Experience</h3>
-            <p>Sed id semper risus in hendrerit. Molestie ac feugiat sed lectus vestibulum. Eros in cursus turpis massa.
-                Vestibulum
-                morbi blandit cursus risus. Sem integer vitae justo eget magna. Purus gravida quis blandit turpis cursus
-                in hac
-                habitasse. Fringilla urna porttitor rhoncus dolor purus non enim praesent elementum. Augue neque gravida
-                in fermentum et
-                sollicitudin. Diam volutpat commodo sed egestas. Sit amet purus gravida quis. Rhoncus dolor purus non
-                enim. Nisi lacus
-                sed viverra tellus in hac habitasse. Non curabitur gravida arcu ac tortor dignissim. Leo in vitae turpis
-                massa sed
-                elementum tempus egestas. In ante metus dictum at tempor commodo ullamcorper a lacus. Non tellus orci ac
-                auctor augue
-                mauris augue neque. Lacus vel facilisis volutpat est velit egestas dui. Laoreet id donec ultrices
-                tincidunt arcu non
-                sodales neque sodales. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. At augue eget
-                arcu dictum
-                varius duis.</p>
+            <p>Sed id semper risus in hendrerit. Molestie ac feugiat sed lectus vestibulum. Eros in cursus turpis massa. Vestibulum morbi blandit cursus risus. Sem integer vitae justo eget magna. Purus gravida quis blandit turpis cursus in hac habitasse.
+                Fringilla urna porttitor rhoncus dolor purus non enim praesent elementum. Augue neque gravida in fermentum et sollicitudin. Diam volutpat commodo sed egestas. Sit amet purus gravida quis. Rhoncus dolor purus non enim. Nisi lacus sed viverra
+                tellus in hac habitasse. Non curabitur gravida arcu ac tortor dignissim. Leo in vitae turpis massa sed elementum tempus egestas. In ante metus dictum at tempor commodo ullamcorper a lacus. Non tellus orci ac auctor augue mauris augue neque.
+                Lacus vel facilisis volutpat est velit egestas dui. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. At augue eget arcu dictum varius duis.</p>
         </div>
     </div>
 
@@ -79,35 +66,20 @@
             <div class="about-elem-box">
                 <img src="icons/vision-icon.png" alt="Vision icon">
                 <span>Our Vision</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel
-                    pretium lectus.
-                    Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent
-                    elementum facilisis leo.
-                    Arcu odio ut sem nulla pharetra diam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel pretium lectus. Tellus
+                    rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent elementum facilisis leo. Arcu odio ut sem nulla pharetra diam.</p>
             </div>
             <div class="about-elem-box">
                 <img src="icons/book-icon.png" alt="School icon">
                 <span>Our Values</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel
-                    pretium lectus.
-                    Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent
-                    elementum facilisis leo.
-                    Arcu odio ut sem nulla pharetra diam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel pretium lectus. Tellus
+                    rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent elementum facilisis leo. Arcu odio ut sem nulla pharetra diam.</p>
             </div>
             <div class="about-elem-box">
                 <img src="icons/school-icon.png" alt="">
                 <span>Key of Success</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel
-                    pretium lectus.
-                    Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent
-                    elementum facilisis leo.
-                    Arcu odio ut sem nulla pharetra diam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ut aliquam purus sit amet. Nam libero justo laoreet sit amet cursus. Consequat nisl vel pretium lectus. Tellus
+                    rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Non enim praesent elementum facilisis leo. Arcu odio ut sem nulla pharetra diam.</p>
             </div>
         </div>
     </div>
@@ -121,30 +93,17 @@
             <div class="miss-row">
                 <span><img src="icons/save-popup.png" alt="Checkmark icon">High Quality Blend of Curricular Activities,
                     Sports and Academics</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna
-                    aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum
-                    dui faucibus in. Urna
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Urna
                     id volutpat lacus laoreet non. Enim ut tellus elementum sagittis vitae et leo.</p>
             </div>
             <div class="miss-row">
                 <span><img src="icons/save-popup.png" alt="Checkmark icon">A place where you can achieve</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna
-                    aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum
-                    dui faucibus
-                    in. Urna
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Urna
                     id volutpat lacus laoreet non. Enim ut tellus elementum sagittis vitae et leo.</p>
             </div>
             <div class="miss-row">
                 <span><img src="icons/save-popup.png" alt="Checkmark icon">A Journey to Excellence</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna
-                    aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum
-                    dui faucibus
-                    in. Urna
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nisl nisi scelerisque eu ultrices vitae. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Urna
                     id volutpat lacus laoreet non. Enim ut tellus elementum sagittis vitae et leo.</p>
             </div>
         </div>
@@ -182,9 +141,8 @@
     <footer>
         <div class="col1">
             <img src="images/logo_footer.png" alt="Mariana School Logo">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna
-                aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
             <span class="icon-span">
                 <svg class="facebook" viewBox="0 0 512 512">
                     <path class="icon"
