--- a/Code/contact.html
+++ b/Code/contact.html
@@ -18,13 +18,13 @@
         <div class="logo"><img src="images/logo_navbar.png" alt="Logo">
         </div>
         <ul class="links">
-            <li><a href="index.php" style="color: #3db166;">Home</a></li>
+            <li><a href="index.html" style="color: #3db166;">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="">Curriculum</a></li>
             <li><a href="">Gallery</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="login.php">Login</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
         <label for="nav-toggle" class="icon-burger">
             <div class="line"></div>
